[DLStreamer] Improve token and access permissions in DLS workflows (#233)
Signed-off-by: dmichalo <dawid.michalowski@intel.com>

--- a/.github/workflows/dls-pr-workflow.yaml
+++ b/.github/workflows/dls-pr-workflow.yaml
@@ -27,13 +27,19 @@ on:
       - 'libraries/dl-streamer/thirdparty/**'
   workflow_call:
   workflow_dispatch:
-permissions: read-all
+permissions: {}
 
 jobs:
   build-dev-images:
     name: Build dev imgs
     uses: ./.github/workflows/dls-build-dev-docker-images.yaml
+    permissions:
+      contents: read
+      packages: read
 
   build-deb-and-img:
     name: Build .deb pkgs and deb imgs
     uses: ./.github/workflows/dls-build-deb-packages-and-images.yaml
+    permissions:
+      contents: read
+      packages: read
