[SCANS] Trivy image scan (#248)

--- a/.github/workflows/dls-build-deb-packages-and-images.yaml
+++ b/.github/workflows/dls-build-deb-packages-and-images.yaml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      packages: read
     strategy:
       fail-fast: false
       matrix:
@@ -81,8 +82,23 @@ jobs:
           -f ./edge-ai-libraries-repo/libraries/dl-streamer/docker/onebinary/${{ matrix.ubuntu_version }}/dlstreamer_${{ matrix.ubuntu_version }}.Dockerfile \
           ./edge-ai-libraries-repo/libraries/dl-streamer
 
+    - name: Scan Docker image with Trivy
+      uses: ./edge-ai-libraries-repo/.github/actions/trivy-image-scan
+      with:
+        image: "ghcr.io/${{ github.repository }}/dls-deb-${{ matrix.ubuntu_version }}:${{ github.sha }}"
+        severity: "CRITICAL"
+        # output-format: "json"
+        output-file: "dls-deb-${{ matrix.ubuntu_version }}-trivy-image-report.txt"
+
+    - name: Upload Trivy report as artifact
+      if: always()
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #4.6.2
+      with:
+        name: dls-deb-${{ matrix.ubuntu_version }}-trivy-image-report
+        path: dls-deb-${{ matrix.ubuntu_version }}-trivy-image-report.txt
+
     - name: Clean up
       if: always()
       run: |
-        rm -rf edge-ai-libraries-repo
+        rm -rf edge-ai-libraries-repo dls-deb-${{ matrix.ubuntu_version }}-trivy-image-report.txt
         docker rmi ghcr.io/${{ github.repository }}/dls-deb-${{ matrix.ubuntu_version }}:${{ github.sha }} || true
