[DOCS] codeowners extension for docs (#525)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,30 +1,64 @@
-README.md @xwu2intel @open-edge-platform/open-edge-platform-docs-write
-LICENSE @xwu2intel
-CONTRIBUTING.md @xwu2intel
-CODE_OF_CONDUCT.md @xwu2intel
-SECURITY.md @xwu2intel
+LICENSE             @xwu2intel
+CONTRIBUTING.md     @xwu2intel
+CODE_OF_CONDUCT.md  @xwu2intel
+SECURITY.md         @xwu2intel
+README.md           @xwu2intel
+
 /.github/workflows/dls*.yml @tbujewsk @nszczygl9 @dmichalo
-/microservices/document-ingestion/ @bharagha @madhuri-rai07 @yogeshmpandey
-/microservices/object-store/ @bharagha @madhuri-rai07 @yogeshmpandey
-/sample-applications/chat-question-and-answer/  @bharagha @madhuri-rai07 @yogeshmpandey
-/sample-applications/chat-question-and-answer-core/  @bharagha @madhuri-rai07 @yogeshmpandey
-/tools/visual-pipeline-and-platform-evaluation-tool/ @p-zak @ktaube26 @tmatenko @pmalatyn
-/microservices/dlstreamer-pipeline-server/ @ajagadi1 @rrajore @sajeevrajput
-/microservices/model-registry/ @rrajore @elroyashjr
-/libraries/dl-streamer/ @tbujewsk @OskarFiedot @marcin-wadolkowski @nszczygl9 @dmichalo @msmiatac
-/microservices/time-series-analytics/  @vkb1 @sathyendranv @pooja-intel
-/microservices/vlm-openvino-serving/ @bharagha @bhardwaj-nakul @yogeshmpandey @llin60
-/microservices/multimodal-embedding-serving/ @bhardwaj-nakul @yogeshmpandey @llin60 @bharagha
-/microservices/visual-data-preparation-for-retrieval/ @bhardwaj-nakul @krish918 @llin60 @xwu2intel
-/microservices/vector-retriever/ @bhardwaj-nakul @krish918 @llin60 @xwu2intel
-/microservices/audio-analyzer/ @bhardwaj-nakul @krish918 @bharagha @yogeshmpandey
-/sample-applications/video-search-and-summarization/ @bhardwaj-nakul @krish918 @bharagha @yogeshmpandey
 
-# documentation content
-#/libraries/dl-streamer/docs @open-edge-platform/open-edge-platform-docs-write
-#/libraries/dl-streamer/README.md @open-edge-platform/open-edge-platform-docs-write
-#/microservices/**/docs @open-edge-platform/open-edge-platform-docs-write
-#/microservices/**/README.md @open-edge-platform/open-edge-platform-docs-write
-#/sample-applications/**/docs @open-edge-platform/open-edge-platform-docs-write
-#/sample-applications/**/README.md @open-edge-platform/open-edge-platform-docs-write
+/libraries/dl-streamer/    @tbujewsk @OskarFiedot @marcin-wadolkowski @nszczygl9 @dmichalo @msmiatac
+/tools/visual-pipeline-and-platform-evaluation-tool/   @p-zak @ktaube26 @tmatenko @pmalatyn
 
+# microservices
+/microservices/audio-analyzer/                         @bhardwaj-nakul @bharagha @krish918 @yogeshmpandey
+/microservices/dlstreamer-pipeline-server/             @rrajore @sajeevrajput @ajagadi1
+/microservices/document-ingestion/                     @bharagha @madhuri-rai07 @yogeshmpandey
+/microservices/model-registry/                         @rrajore @elroyashjr
+/microservices/multimodal-embedding-serving/           @bhardwaj-nakul @bharagha @yogeshmpandey @llin60
+/microservices/time-series-analytics/                  @vkb1 @sathyendranv @pooja-intel
+/microservices/vector-retriever/                       @bhardwaj-nakul @krish918 @llin60 @xwu2intel
+/microservices/visual-data-preparation-for-retrieval/  @bhardwaj-nakul @krish918 @llin60 @xwu2intel
+/microservices/vlm-openvino-serving/                   @bhardwaj-nakul @bharagha @yogeshmpandey @llin60
+# this folder does not exist
+/microservices/object-store/                           @bharagha @madhuri-rai07 @yogeshmpandey
+
+# sample-applications
+# /sample-applications/chat-question-and-answer/  lacks codeowners, consider adding
+/sample-applications/chat-question-and-answer/                @bharagha @yogeshmpandey @madhuri-rai07
+/sample-applications/chat-question-and-answer-core/           @bharagha @yogeshmpandey @madhuri-rai07
+/sample-applications/video-search-and-summarization/          @bharagha @yogeshmpandey @bhardwaj-nakul @krish918
+
+
+# documentation content: microservices
+/microservices/audio-analyzer/docs/                             @bharagha @bhardwaj-nakul @krish918 @yogeshmpandey  @open-edge-platform/open-edge-platform-docs-write
+/microservices/audio-analyzer/README.md                         @bharagha @bhardwaj-nakul @krish918 @yogeshmpandey  @open-edge-platform/open-edge-platform-docs-write
+/microservices/dlstreamer-pipeline-server/docs/                 @rrajore @sajeevrajput @ajagadi1                    @open-edge-platform/open-edge-platform-docs-write
+/microservices/dlstreamer-pipeline-server/README.md             @rrajore @sajeevrajput @ajagadi1                    @open-edge-platform/open-edge-platform-docs-write
+/microservices/document-ingestion/docs/                         @bharagha @madhuri-rai07 @yogeshmpandey             @open-edge-platform/open-edge-platform-docs-write
+/microservices/document-ingestion/README.md                     @bharagha @madhuri-rai07 @yogeshmpandey             @open-edge-platform/open-edge-platform-docs-write
+/microservices/model-registry/docs/                             @rrajore @elroyashjr                                @open-edge-platform/open-edge-platform-docs-write
+/microservices/model-registry/README.md                         @rrajore @elroyashjr                                @open-edge-platform/open-edge-platform-docs-write
+/microservices/multimodal-embedding-serving/docs/               @bhardwaj-nakul @yogeshmpandey @llin60 @bharagha    @open-edge-platform/open-edge-platform-docs-write
+/microservices/multimodal-embedding-serving/README.md           @bhardwaj-nakul @yogeshmpandey @llin60 @bharagha    @open-edge-platform/open-edge-platform-docs-write
+/microservices/time-series-analytics/docs/                      @vkb1 @sathyendranv @pooja-intel                    @open-edge-platform/open-edge-platform-docs-write
+/microservices/time-series-analytics/README.md                  @vkb1 @sathyendranv @pooja-intel                    @open-edge-platform/open-edge-platform-docs-write
+/microservices/vector-retriever/docs/                           @bhardwaj-nakul @krish918 @llin60 @xwu2intel        @open-edge-platform/open-edge-platform-docs-write
+/microservices/vector-retriever/README.md                       @bhardwaj-nakul @krish918 @llin60 @xwu2intel        @open-edge-platform/open-edge-platform-docs-write
+/microservices/visual-data-preparation-for-retrieval/docs/      @bhardwaj-nakul @krish918 @llin60 @xwu2intel        @open-edge-platform/open-edge-platform-docs-write
+/microservices/visual-data-preparation-for-retrieval/README.md  @bhardwaj-nakul @krish918 @llin60 @xwu2intel        @open-edge-platform/open-edge-platform-docs-write
+/microservices/vlm-openvino-serving/docs/                       @bharagha @bhardwaj-nakul @yogeshmpandey @llin60    @open-edge-platform/open-edge-platform-docs-write
+/microservices/vlm-openvino-serving/README.md                   @bharagha @bhardwaj-nakul @yogeshmpandey @llin60    @open-edge-platform/open-edge-platform-docs-write
+
+# documentation content:sample-applications
+/sample-applications/chat-question-and-answer/docs/             @bharagha @yogeshmpandey @madhuri-rai07             @open-edge-platform/open-edge-platform-docs-write
+/sample-applications/chat-question-and-answer/README.md         @bharagha @yogeshmpandey @madhuri-rai07             @open-edge-platform/open-edge-platform-docs-write
+/sample-applications/chat-question-and-answer-core/docs/        @bharagha @yogeshmpandey @madhuri-rai07             @open-edge-platform/open-edge-platform-docs-write
+/sample-applications/chat-question-and-answer-core/README.md    @bharagha @yogeshmpandey @madhuri-rai07             @open-edge-platform/open-edge-platform-docs-write
+/sample-applications/video-search-and-summarization/docs/       @bharagha @yogeshmpandey @bhardwaj-nakul @krish918  @open-edge-platform/open-edge-platform-docs-write
+/sample-applications/video-search-and-summarization/README.md   @bharagha @yogeshmpandey @bhardwaj-nakul @krish918  @open-edge-platform/open-edge-platform-docs-write
+
+# documentation content:s tools and libraries
+/libraries/dl-streamer/docs                                     @tbujewsk @OskarFiedot @marcin-wadolkowski @nszczygl9 @dmichalo @msmiatac @open-edge-platform/open-edge-platform-docs-write
+/libraries/dl-streamer/README.md                                @tbujewsk @OskarFiedot @marcin-wadolkowski @nszczygl9 @dmichalo @msmiatac @open-edge-platform/open-edge-platform-docs-write
+/tools/visual-pipeline-and-platform-evaluation-tool/docs        @p-zak @ktaube26 @tmatenko @pmalatyn                @open-edge-platform/open-edge-platform-docs-write
+/tools/visual-pipeline-and-platform-evaluation-tool/README.md   @p-zak @ktaube26 @tmatenko @pmalatyn                @open-edge-platform/open-edge-platform-docs-write
