timeseries: workflow: Fixed the PR Run workflow (#593)
updates GitHub Actions workflows to enable reusable workflow calling and consolidates scanning workflows. The changes allow the timeseries-scans workflow to be called from other workflows with configurable scan targets, replacing a previously referenced workflow file.

Added workflow_call trigger with configurable target input to timeseries-scans.yaml
Updated all job conditions to use inputs.target instead of github.event.inputs.target
Modified timeseries-build-pull-request.yml to call the updated workflow with all-scans target
Added required security-events and actions permissions for the calling workflow

Signed-off-by: Vellaisamy, Sathyendran <sathyendran.vellaisamy@intel.com>

--- a/.github/workflows/timeseries-build-pull-request.yml
+++ b/.github/workflows/timeseries-build-pull-request.yml
@@ -33,6 +33,8 @@ permissions:
   contents: read
   packages: read
   pull-requests: read
+  security-events: write
+  actions: read
 
 jobs:
   timeseries-pre-merge-build:
@@ -116,4 +118,6 @@ jobs:
         path: /tmp/report.txt
   
   timeseries-scans:
-    uses: ./.github/workflows/timeseries-scans-virus-bandit-pylint.yaml
+    uses: ./.github/workflows/timeseries-scans.yaml
+    with:
+      target: all-scans
