time-series-analytics: Added time series analytics microservice functional tests (#585)
comprehensive functional test suites for the time-series-analytics microservice to verify service functionality in both Docker and Helm deployment environments.

Introduces functional test infrastructure with Docker and Helm test suites
Adds REST API testing utilities for comprehensive endpoint validation
Integrates functional tests into CI/CD workflows for both PR validation and weekly testing

Signed-off-by: Pooja Kumbharkar <pooja.kumbharkar@intel.com>

--- a/.github/workflows/timeseries-build-pull-request.yml
+++ b/.github/workflows/timeseries-build-pull-request.yml
@@ -116,6 +116,12 @@ jobs:
       with:
         name: unit-test-report
         path: /tmp/report.txt
+
+  timeseries-function-tests:
+    name: Timeseries function Test
+    uses: ./.github/workflows/timeseries-weekly-functional-tests.yaml
+    with:
+      test_pattern: 'test_docker.py::test_input_endpoint test_docker.py::test_health_check test_helm.py::test_input_endpoint test_helm.py::test_health_check'
   
   timeseries-scans:
     uses: ./.github/workflows/timeseries-scans.yaml
